--- a/rps.html
+++ b/rps.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,15 @@
 </head>
 <body>  
    <h1>ROCK PAPER SCISSORS</h1>
-   <h3>Press f12 to play in console.  cntrl + R to try 5 more rounds.</h3> 
+   <div>  
+       <div id = "playerscore"></div>
+       <div id = "computerscore"></div>
+       <div id = "winstatus"></div>
+   </div>
+   <button id='rock'>ROCK</button>
+   <button id='paper'>PAPER</button>
+   <button id='scissors'>SCISSORS</button>
+
    <script src="script.js"></script>
 </body>
 </html>
